# Speech_To_Text_Service

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/api/: router.py  tasks.py  worker.py
app/api/v1/stt/: stt_api.py
app/src/: main_driver.py  singleton.py
app/src/stt_main/: base.py  factory.py
app/src/stt_main/whisperSTT/: whisperstt.py
app/utils/: callbackhandler.py
